update org chart

--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -117,130 +117,63 @@
         </div>         
     </div>
 </section>
+<div class="container">
+    <div class="row">
+        <div class="tree">
+            <ul>
+                <li> <a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/ceo.jpg')}}"><span><b>JONWEL SUPRESENCIA</b><br>C.E.O</span></a>
+                    <ul>
+                                <li> <a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/admi_head.jpg')}}"><span><b>SALOME SUPRESENCIA</b><br>VICE PRESIDENT</span></a></li>	
+                            <ul>
+                                <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_1.jpg')}}"><span><b>VINCENT CORONADO </b><br>VP|BRANCH MANAGER</span></a></li>
+                                <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_2.jpg')}}"><span><b>DANYLIL ASTURIAS </b><br>VP|BRANCH MANAGER</span></a></li>
+                                <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_3.jpg')}}"><span><b>GERSON ALDE </b><br>VP|BRANCH MANAGER</span></a></li>
+                                <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_accnt_head.jpg')}}"><span><b>HAIREL SUPRESENCIA </b><br>VP|BRANCH MANAGER</span></a></li>
+                                <!--<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vice_president.jpg')}}sec_accnt_head.jpg"><span> HAIREL SUPRESENCIA <br>HEAD SECRETARY | ACCOUNTING</span></a></li> -->
+                                    <ul>
+                                        
+                                        <ul>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_1.jpg')}}"><span><b> CRISTINE DAEL </b><br>TEACHER|SECRETARY</span></a></li>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_2.jpg')}}"><span> <b>MAEVELLYN OLESCO</b><br>TEACHER|SECRETARY</span></a></li>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_1.jpg')}}"><span> <b>KATHLEEN FATIM OMILAO RAMOS</b> <br>TEACHER</span></a></li>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_2.jpg')}}"><span> <b>JAY-AR MALDO </b><br>TEACHER</span></a></li>
+                                        </ul>
+                                        <ul>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_3.jpg')}}"><span> <b>ROYCE MARIE LABIAN </b><br>TEACHER</span></a></li>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_4.jpg')}}"><span> <b>MA. THERESA CATALAN </b><br>TEACHER</span></a></li>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_5.jpg')}}"><span> <b>ARLENE GALIPOSO </b><br>TEACHER</span></a></li>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/os_marketing_1.jpg')}}"><span> <b>RUSSEL GALPO </b><br>OFFICE STAFF | MARKETING</span></a></li>
+                                        </ul>
+                                        <ul>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_1.jpg')}}"><span> <b>DANGELLI ROSE MUÑOZ </b><br>SECRETARY</span></a></li>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_2.jpg')}}"><span> <b>DANYLIL ASTURIAS </b><br>SECRETARY</span></a></li>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <b>MELODY MARIE MACALISANG </b><br>SECRETARY</span></a></li>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <b>IRISH GOBANGCO </b><br>SECRETARY</span></a></li>
+                                        </ul>
+                                        <ul>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/marketing_1.jpg')}}"><span> <b> JAYSON VERSOSA </b><br>MARKETING STAFF</span></a></li>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/marketing_2.jpg')}}"><span> <b> CARLO GUANZON </b><br>MARKETING STAFF</span></a></li>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span>  <br>MARKETING STAFF</span></a></li>
+                                            <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span>  <br>MARKETING STAFF</span></a></li>
+                                        </ul>
+                                        <ul>
+                                        <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/tricities.jpg')}}"><span> <b>TRICITIES </b><br>BOOKKEPER</span></a></li>
+                                        <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <b>LIKES TEAM </b><br>IT</span></a></li>
+                                        </ul>	
+                                </ul>					
+                            </ul>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div> 
 
 <section data-aos="zoom-in" data-aos-duration="2000" class="bg-light pb-5 pt-5"> 
     <div class="container py-5"> 
         <h2 class="h5 text-center text-primary">Our Organization</h2>
         <h3 class="h1 mb-4 text-center text-dark">Admin and Teachers</h3>
-        <div class="justify-content-center row"> 
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/ceo.jpg')}}" class="img-fluid mb-3 w-100" alt="..." width="320" height="320">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark">Jonwell</h3>
-                        <h4 class="fw-light h6 mb-0">CEO</h4>
-                    </div>                     
-                </div>                 
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/vice_president.jpg')}}" class="img-fluid mb-3 w-100" alt="..." width="320" height="400">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark">Kathryn Murphy</h3>
-                        <h4 class="fw-light h6 mb-0">Vice President</h4>
-                    </div>                     
-                </div>                 
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/vincent_coronado.jpg')}}" class="img-fluid mb-3 w-100" alt="..." width="320" height="400">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark">Vincent Coronado</h3>
-                        <h4 class="fw-light h6 mb-0">Branch Manager and Owner</h4>
-                    </div>                     
-                </div>                 
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/branch_manager_1.jpg')}}" class="img-fluid mb-3 w-100" alt="..." height="400" width="320">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark"></h3>
-                        <h4 class="fw-light h6 mb-0">Branch Manager</h4>
-                    </div>                     
-                </div>                 
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/branch_manager_2.jpg')}}" class="img-fluid mb-3 w-100" alt="..." height="400" width="320">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark"></h3>
-                        <h4 class="fw-light h6 mb-0">Branch Manager</h4>
-                    </div>                     
-                </div>                 
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/hairel_supresencia.jpg')}}" class="img-fluid mb-3 w-100" alt="..." height="400" width="320">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark">Hairel Supresencia</h3>
-                        <h4 class="fw-light h6 mb-0">Accounting Staff</h4>
-                    </div>                     
-                </div>                 
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/greggy.jpg')}}" class="img-fluid mb-3 w-100" alt="..." height="400" width="320">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark">Greggy</h3>
-                        <h4 class="fw-light h6 mb-0">Head Secretary</h4>
-                    </div>                     
-                </div>                 
-            </div>       
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/russel.jpg')}}" class="img-fluid mb-3 w-100" alt="..." height="400" width="320">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark">Russel</h3>
-                        <h4 class="fw-light h6 mb-0">Marketing Staff</h4>
-                    </div>                     
-                </div>                 
-            </div>    
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/carlo_guanzon.jpg')}}" class="img-fluid mb-3 w-100" alt="..." height="400" width="320">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark">Carlo Guanzon</h3>
-                        <h4 class="fw-light h6 mb-0">Marketing Staff</h4>
-                    </div>                     
-                </div>                 
-            </div>    
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/cristine.jpg')}}" class="img-fluid mb-3 w-100" alt="..." height="400" width="320">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark">Cristine</h3>
-                        <h4 class="fw-light h6 mb-0">Teacher</h4>
-                    </div>                     
-                </div>                 
-            </div>    
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/arlene.jpg')}}" class="img-fluid mb-3 w-100" alt="..." height="400" width="320">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark">Arlene</h3>
-                        <h4 class="fw-light h6 mb-0">Teacher</h4>
-                    </div>                     
-                </div>                 
-            </div>   
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/teacher_1.jpg')}}" class="img-fluid mb-3 w-100" alt="..." height="400" width="320">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark"></h3>
-                        <h4 class="fw-light h6 mb-0">Teacher</h4>
-                    </div>                     
-                </div>                 
-            </div>  
-            <div class="col-lg-3 col-md-6 col-sm-6 py-3"> 
-                <div class="bg-white p-3"> 
-                    <img src="{{url_for('prime_home.static', filename='img/organization/jay-ar_maldo.jpg')}}" class="img-fluid mb-3 w-100" alt="..." height="400" width="320">
-                    <div class="p-2">
-                        <h3 class="h5 text-dark">Jay-ar Maldo</h3>
-                        <h4 class="fw-light h6 mb-0">Teacher</h4>
-                    </div>                     
-                </div>                 
-            </div>  
-        </div>         
+       
     </div>     
 </section>
 
