--- a/prime_home/templates/prime_home/base.html
+++ b/prime_home/templates/prime_home/base.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="{{ url_for('prime_home.static', filename='css/owl.theme.default.min.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
     <link rel="stylesheet" href="{{ url_for('prime_home.static', filename='css/carousel.css') }}">
+    <link rel="stylesheet" href="{{ url_for('prime_home.static', filename='css/org_chart.css') }}">
 
     <!-- Block Head -->
     {% block head %} {% endblock %}
