--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -1173,7 +1173,7 @@
                                                     <thead>
                                                         <tr>
                                                             <th class="text-center">DATE</th>
-                                                            <th class="text-center">PARTICULARS</th>
+                                                            <th class="text-center">DESCRIPTION</th>
                                                             <th class="text-center">ACCOUNT NO. | PARTICULAR NO.</th>
                                                             <th class="text-center">BILLING MONTH</th>
                                                             <th class="text-center">TOTAL AMOUNT DUE</th>
