--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -627,8 +627,9 @@
                     return json.data;
                 },
                 "data": function (d) {
-                    //d.date_from = $("#filter_tab2_date_from").val();
-                    //d.date_to = $("#filter_tab2_date_to").val();
+                    d.description = $("#filter_utilities_description").val();
+                    d.date_from = $("#filter_utilities_date_from").val();
+                    d.date_to = $("#filter_utilities_date_to").val();
                 }
             },
             "pageLength": 25,
@@ -713,33 +714,56 @@
             "order": [[1, 'asc']],
         });
 
-    });
-
-
-    var dtbl_refund = $("#tbl_refund").DataTable({
-        "dom": 'rtip',
-        "processing": true,
-        "autoWidth": false,
-        "serverSide": true,
-        "ajax": {
-            "url": "/learning-management/branches/all/refund/dt",
-            "dataSrc": function (json) {
-                //$("#total_office_supply_tab").html("₱" + json.totalOfficeSupply);
-                return json.data;
+        
+        var dtbl_refund = $("#tbl_refund").DataTable({
+            "dom": 'rtip',
+            "processing": true,
+            "autoWidth": false,
+            "serverSide": true,
+            "ajax": {
+                "url": "/learning-management/branches/all/refund/dt",
+                "dataSrc": function (json) {
+                    //$("#total_office_supply_tab").html("₱" + json.totalOfficeSupply);
+                    return json.data;
+                },
+                "data": function (d) {
+                    //d.date_from = $("#filter_tab2_date_from").val();
+                    //d.date_to = $("#filter_tab2_date_to").val();
+                }
             },
-            "data": function (d) {
-                //d.date_from = $("#filter_tab2_date_from").val();
-                //d.date_to = $("#filter_tab2_date_to").val();
-            }
-        },
-        "pageLength": 25,
-        "ordering": false,
-        "order": [[0, 'asc']],
-        "columnDefs": [
-        ],
-        "order": [[1, 'asc']],
-    });
+            "pageLength": 25,
+            "ordering": false,
+            "order": [[0, 'asc']],
+            "columnDefs": [
+            ],
+            "order": [[1, 'asc']],
+        });
 
+
+        // $("#filter_utilities_date_from").datepicker( { 
+        //    changeYear: false, 
+        //    dateFormat: 'MM-dd',
+        //}).focus(function () {
+        //    $(".ui-datepicker-year").hide();
+        //});
+
+
+        $('#filter_utilities_description').change(function () {
+            dtbl_utilities.ajax.reload();
+        });
+
+
+        $('#filter_utilities_date_from').change(function () {
+            dtbl_utilities.ajax.reload();
+        });
+
+        
+        $('#filter_utilities_date_to').change(function () {
+            dtbl_utilities.ajax.reload();
+        });
+
+        // End of document.ready
+    });
 </script>
 {% endblock %}
 
@@ -1168,18 +1192,32 @@
                                                 <div class="col-lg-4 col-xl-4">
                                                 </div>
                                             </div>
-                                            <!-- <div class="form-row">
+                                            <div class="form-row">
                                                 <div class="col-md-2 col-xs-2">
                                                     <div class="position-relative form-group">
-                                                        <label for="filter_tab3_category" class="">Year</label>
-                                                        <select id="filter_tab3_category" class="form-control" required>
+                                                        <label for="filter_utilities_description" class="">Description</label>
+                                                        <select id="filter_utilities_description" class="form-control">
                                                             <option value="">Choose...</option>
-                                                            <option value="">2022</option>
-                                                            <option value="">2021</option>
+                                                            <option value="Building Rental">Building Rental</option>
+                                                            <option value="Electricity Bill">Electricity Bill</option>
+                                                            <option value="Water Bill">Water Bill</option>
+                                                            <option value="Internet And Communication Bill">Internet And Communication Bill</option>
                                                         </select>
                                                     </div>
                                                 </div>
-                                            </div> -->
+                                                <div class="col-md-2 col-xs-2">
+                                                    <div class="position-relative form-group">
+                                                        <label for="filter_utilities_date_from" class="">Date From</label>
+                                                        <input id="filter_utilities_date_from" type="date" class="form-control" placeholder="Date From">
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-2 col-xs-2">
+                                                    <div class="position-relative form-group">
+                                                        <label for="filter_utilities_date_to" class="">Date To</label>
+                                                        <input id="filter_utilities_date_to" type="date" class="form-control" placeholder="Date To">
+                                                    </div>
+                                                </div>
+                                            </div>
                                             <div style="margin-top: 10px;" class="table-responsive">
                                                 <table id="tbl_utilities"
                                                     class="align-middle mb-0 table table-bordered table-striped table-hover">
@@ -1223,12 +1261,8 @@
                                             <!-- <div class="form-row">
                                                 <div class="col-md-2 col-xs-2">
                                                     <div class="position-relative form-group">
-                                                        <label for="filter_tab3_category" class="">Year</label>
-                                                        <select id="filter_tab3_category" class="form-control" required>
-                                                            <option value="">Choose...</option>
-                                                            <option value="">2022</option>
-                                                            <option value="">2021</option>
-                                                        </select>
+                                                        <label for="filter_utilities_date_from" class="">Date From</label>
+                                                        <input id="filter_utilities_date_from" type="date" class="form-control">
                                                     </div>
                                                 </div>
                                             </div> -->
