--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -1429,7 +1429,12 @@
                                                             <th class="text-center">BATCH NO.</th>
                                                             <th class="text-center">SCHEDULE</th>
                                                             <th class="text-center">AMOUNT</th>
+                                                            <th class="text-center">BOOK</th>
+                                                            <th class="text-center">UNIFORM</th>
+                                                            <th class="text-center">ID LACE</th>
                                                             <th class="text-center">CONTACT PERSON</th>
+                                                            <th class="text-center">REBATE AMOUNT</th>
+                                                            <!-- <th class="text-center">REBATE STATUS</th> -->
                                                         </tr>
                                                     </thead>
                                                     <tbody>
